Feat: 팔로우, 알림, 피드, 블록, 맵, 알림, 팻프로필, 검색, 구독 카프카 의존성 제거
팔로우, 알림, 피드, 블록, 맵, 알림, 팻프로필(일부), 검색(일부), 구독 카프카 의존성 제거

#1